等级1难度降低

--- a/zh-cn/RedstoneExam_Level1.tex
+++ b/zh-cn/RedstoneExam_Level1.tex
@@ -121,7 +121,7 @@
 
             \subsection{输出物品可以集中到一个容器内。}
 
-            \subsection{【高难度】熔炉倍速>=30x。}
+            \subsection{熔炉倍速>=10x。}
 
             \subsection{【高难度】输出物品可以自动打包到潜影盒内。}
 \end{document}
