新增等级2试卷

--- a/zh-cn/RedstoneExam_Level1.tex
+++ b/zh-cn/RedstoneExam_Level1.tex
@@ -109,11 +109,11 @@
         
     \part{上机操作题}
         \section{运用所学知识，设计红石装置}{共5个评分点，每个评分点6分}
-            题目背景：Alex觉得Minecraft中的熔炉加工矿石速度太慢，请你帮Alex设计一个高速熔炉。
+            \textbf{题目背景：}Alex觉得Minecraft中的熔炉加工矿石速度太慢，请你帮Alex设计一个高速熔炉。
 
-            帮助信息：熔炉上方的漏斗可以向熔炉输入待加工物，后方的漏斗可以向其输入燃料，下方的漏斗可以输出产物。同时，漏斗也可以从上方箱子矿车中吸取物品。
+            \textbf{帮助信息：}熔炉上方的漏斗可以向熔炉输入待加工物，后方的漏斗可以向其输入燃料，下方的漏斗可以输出产物。同时，漏斗也可以从上方箱子矿车中吸取物品。
 
-            评分点如下：
+            \textbf{评分点如下：}
 
             \subsection{可以一次性放入5组待加工物品。}
 
