--- a/zh-cn/Answers.tex
+++ b/zh-cn/Answers.tex
@@ -18,5 +18,9 @@
             \subsubsection{主观题}
                 11. 从小明未与其他玩家交流，导致其他玩家的刷怪塔等设施无法使用角度回答。（注意：不影响刷铁机等，原理见Minecraft Wiki）
                 
-                12. 刷怪塔等基于怪物刷新的设施。（注意：不影响刷铁机等，原理见Minecraft Wiki)
+                12. 刷怪塔等基于怪物刷新的设施。（注意：不影响刷铁机等，原理见Minecraft Wiki）
+        
+        \subsection{二级}
+            \subsubsection{客观题}
+                1~5 BAAD
 \end{document}
